<resources>
    <!--LABELS-->
    <string name="app_name">My App Portfolio</string>
    <string name="my_title">My Nanodegree Apps!</string>
    <string name="button">Spotify Streamer</string>
    <string name="button2">Football Scores App</string>
    <string name="button3">Library App</string>
    <string name="button4">Build It Bigger</string>
    <string name="button5">XYZ Reader</string>
    <string name="button6">Capstone</string>
    <!--SETTINGS-->
    <string name="action_settings">Settings</string>
</resources>
